--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #15eaab; }
+  background: #7672d3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #945cc2; }
+  background: #1cd319; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #1c4594; }
+  background: #04e71d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #81ea59; }
+  background: #c8eefb; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ce0ed2; }
+  background: #954e3c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #a79b21; }
+  background: #942799; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6b9d68; }
+  background: #4da00f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bd5409; }
+  background: #1afa52; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #242a13; }
+  background: #0a96a3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f30c61; }
+  background: #ec51ad; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #37c153; }
+  background: #7821dc; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b4a562; }
+  background: #da77ea; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #13ada8; }
+  background: #de3471; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #263876; }
+  background: #33bdd7; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b292ea; }
+  background: #d4989c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f6eff8; }
+  background: #0c4d69; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ecf813; }
+  background: #c5509b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0e5359; }
+  background: #8dbdf5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #627064; }
+  background: #6a7254; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d153f2; }
+  background: #b6bd4f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1eff09; }
+  background: #83ce05; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cbebb6; }
+  background: #847c15; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c19f5e; }
+  background: #b01ab4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2ac839; }
+  background: #74e726; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #48dcf7; }
+  background: #2fe890; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f4bb2c; }
+  background: #c942db; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #26ad6a; }
+  background: #a5b38f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fe4a62; }
+  background: #7698a5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e5181a; }
+  background: #9c2c71; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b4a741; }
+  background: #f70bad; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #969682; }
+  background: #2c22fb; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c23486; }
+  background: #cff4a1; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b0c93f; }
+  background: #38180b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c75694; }
+  background: #311898; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #34b2c4; }
+  background: #250d44; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #7f4809; }
+  background: #4c19c6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3f8681; }
+  background: #343197; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9ce6c0; }
+  background: #85d5c5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1094dd; }
+  background: #26f86c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e73eae; }
+  background: #b5941d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #819ca2; }
+  background: #ff4fed; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #76c5b0; }
+  background: #e8fa32; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e6f0dc; }
+  background: #756218; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3eba23; }
+  background: #b22fa6; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #651dba; }
+  background: #5655d3; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #53f37e; }
+  background: #ddbec4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #cd5471; }
+  background: #7e55b8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e285aa; }
+  background: #a8d401; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5ad3e9; }
+  background: #77f2ee; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #281d19; }
+  background: #2f277b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c74e28; }
+  background: #36836e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #100911; }
+  background: #8ffc97; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1e471c; }
+  background: #5199bb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d4f318; }
+  background: #1bc535; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #1d7a4c; }
+  background: #93c1e0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #df81b2; }
+  background: #d6c0e7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2a8af6; }
+  background: #508726; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4476e3; }
+  background: #50acaa; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ac1f94; }
+  background: #e23bee; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0a7ac0; }
+  background: #4185b8; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #555fe4; }
+  background: #565f73; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8e3ea9; }
+  background: #050c73; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9030ca; }
+  background: #7b9691; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #04d4eb; }
+  background: #dede3b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0d3ce3; }
+  background: #274516; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #43aebe; }
+  background: #02e028; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1b1205; }
+  background: #b1cb47; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9c6aa6; }
+  background: #73574a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4b7f13; }
+  background: #aff29a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bc647a; }
+  background: #b47fdc; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #43d37e; }
+  background: #84bae9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1d0fd2; }
+  background: #68c366; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0e9f47; }
+  background: #58d1a8; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #cb4f46; }
+  background: #319952; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #7cb2c3; }
+  background: #9fac61; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #df70e2; }
+  background: #d49921; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #41eb05; }
+  background: #7d1922; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a3f3b8; }
+  background: #95df8a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e3b783; }
+  background: #1654d7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ed88a8; }
+  background: #0e488a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7fa536; }
+  background: #fdc7e4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b8fa73; }
+  background: #e57e6e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #68b347; }
+  background: #7c4121; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b5bc4c; }
+  background: #2f6257; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b70491; }
+  background: #7ebe77; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #620f18; }
+  background: #db9135; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #bcf7e4; }
+  background: #97b426; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5d2eb9; }
+  background: #312c75; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fbaa60; }
+  background: #caf4ff; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #393d83; }
+  background: #eeaff0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #52b4ae; }
+  background: #f79966; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7691dc; }
+  background: #03c75d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9ccda8; }
+  background: #73c45c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #083ec6; }
+  background: #c7a6fd; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #237bbb; }
+  background: #b24d19; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f10bcd; }
+  background: #bdfd2c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #84f50a; }
+  background: #d80729; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fa9c73; }
+  background: #cc3cbe; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #588b51; }
+  background: #e25406; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a772e2; }
+  background: #98c7e4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15350,8 +15350,8 @@ li:hover {
     .sliding-section .sliding-left-section .device-filterleft-bar {
       margin-top: 100px; }
       .sliding-section .sliding-left-section .device-filterleft-bar .filter-icon-group {
-        margin-right: 6px;
-        width: 16px; }
+        margin-right: 12px;
+        width: 18px; }
     .sliding-section .sliding-left-section .nav-pills .nav-link {
       text-decoration: none;
       color: #4c4c4c;
@@ -15933,7 +15933,7 @@ option {
 .system-settings-wrapper .sliding-left-section .device-filterleft-bar {
   margin-top: 0px; }
   .system-settings-wrapper .sliding-left-section .device-filterleft-bar .filter-icon-group {
-    width: 25px; }
+    width: 18px; }
 .system-settings-wrapper .sliding-left-section .nav-pills .nav-link {
   margin: 0px !important; }
 .system-settings-wrapper .tabs-aggre button {
@@ -16689,6 +16689,9 @@ input:not(:checked) + .slider-switch > .switch-non {
   background: url(../images/eye-hide-icon.svg) no-repeat 0px center;
   cursor: pointer;
   padding-left: 23px; }
+
+.sarch-right-bar-border select {
+  border: 1px solid #bababa !important; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
