--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #7672d3; }
+  background: #69f9a8; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1cd319; }
+  background: #2a92f5; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #04e71d; }
+  background: #3b843c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c8eefb; }
+  background: #f882bf; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #954e3c; }
+  background: #19eda9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #942799; }
+  background: #80fba4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4da00f; }
+  background: #ab5bc2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1afa52; }
+  background: #edd985; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0a96a3; }
+  background: #87e065; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ec51ad; }
+  background: #1bdcd5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7821dc; }
+  background: #42347e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #da77ea; }
+  background: #5b1a10; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #de3471; }
+  background: #f5bcd9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #33bdd7; }
+  background: #8134c3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d4989c; }
+  background: #2edce3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0c4d69; }
+  background: #8beba0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c5509b; }
+  background: #b6508f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8dbdf5; }
+  background: #3d37ee; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6a7254; }
+  background: #156fa9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b6bd4f; }
+  background: #44bc95; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #83ce05; }
+  background: #604598; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #847c15; }
+  background: #17dac5; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b01ab4; }
+  background: #07e926; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #74e726; }
+  background: #d02570; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #2fe890; }
+  background: #5a7f8b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c942db; }
+  background: #7e7818; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a5b38f; }
+  background: #d67e85; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7698a5; }
+  background: #aee0e7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9c2c71; }
+  background: #e98725; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f70bad; }
+  background: #056b02; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2c22fb; }
+  background: #2c5f84; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #cff4a1; }
+  background: #d130af; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #38180b; }
+  background: #711bb7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #311898; }
+  background: #f5102b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #250d44; }
+  background: #e28bb4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4c19c6; }
+  background: #e8a867; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #343197; }
+  background: #8a7661; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #85d5c5; }
+  background: #49dcd9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #26f86c; }
+  background: #c259dd; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b5941d; }
+  background: #278d39; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ff4fed; }
+  background: #d55c99; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e8fa32; }
+  background: #4c4072; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #756218; }
+  background: #aa8c58; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b22fa6; }
+  background: #0940a9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5655d3; }
+  background: #bc7d45; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ddbec4; }
+  background: #08b4aa; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7e55b8; }
+  background: #9b6918; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a8d401; }
+  background: #124a16; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #77f2ee; }
+  background: #36a3a0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2f277b; }
+  background: #f1a9ec; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #36836e; }
+  background: #81ec6d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8ffc97; }
+  background: #1e1ca7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5199bb; }
+  background: #d93a7e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #1bc535; }
+  background: #456f52; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #93c1e0; }
+  background: #aed42a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d6c0e7; }
+  background: #119681; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #508726; }
+  background: #64a040; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #50acaa; }
+  background: #8c3dc3; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e23bee; }
+  background: #a99a3d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4185b8; }
+  background: #190b9a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #565f73; }
+  background: #f75777; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #050c73; }
+  background: #f2201d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #7b9691; }
+  background: #35aad5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #dede3b; }
+  background: #167da3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #274516; }
+  background: #3d281c; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #02e028; }
+  background: #c8e14a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b1cb47; }
+  background: #18a4d6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #73574a; }
+  background: #57b272; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #aff29a; }
+  background: #f7bd0e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b47fdc; }
+  background: #4dcaf8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #84bae9; }
+  background: #c51835; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #68c366; }
+  background: #9572af; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #58d1a8; }
+  background: #92b68a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #319952; }
+  background: #121d04; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #9fac61; }
+  background: #a2cbc7; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d49921; }
+  background: #e68686; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7d1922; }
+  background: #491a27; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #95df8a; }
+  background: #60f59e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1654d7; }
+  background: #fe3a47; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0e488a; }
+  background: #7151aa; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #fdc7e4; }
+  background: #4c8106; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e57e6e; }
+  background: #19693c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7c4121; }
+  background: #3df643; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2f6257; }
+  background: #b5f489; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7ebe77; }
+  background: #27952e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #db9135; }
+  background: #1f43e2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #97b426; }
+  background: #bdb018; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #312c75; }
+  background: #4551e8; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #caf4ff; }
+  background: #65d743; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #eeaff0; }
+  background: #e87048; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f79966; }
+  background: #626104; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #03c75d; }
+  background: #c82f2d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #73c45c; }
+  background: #a9cd0e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c7a6fd; }
+  background: #dbdcb4; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b24d19; }
+  background: #39fc66; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bdfd2c; }
+  background: #e782e1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #d80729; }
+  background: #77ef18; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #cc3cbe; }
+  background: #d91c23; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e25406; }
+  background: #3a4e3f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #98c7e4; }
+  background: #b0c779; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15943,7 +15943,9 @@ option {
 .system-settings-wrapper .static-routes-div {
   padding: 20px 33px; }
 .system-settings-wrapper .tabs-aggre button {
-  margin: 6px 0px; }
+  margin: 6px 0px;
+  display: flex;
+  align-items: center; }
 
 .system-settings-content-wrapper {
   padding: 40px 50px;
@@ -16692,6 +16694,35 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .sarch-right-bar-border select {
   border: 1px solid #bababa !important; }
+
+.flex-sub-framework-box .flex-sub-row-container {
+  margin-left: 32.7%; }
+  .flex-sub-framework-box .flex-sub-row-container::after {
+    top: -20px !important;
+    height: 108px !important; }
+.flex-sub-framework-box .horizontal::after {
+  content: "";
+  width: 0;
+  height: 36px;
+  position: absolute;
+  border: 1px solid #776fff;
+  top: -18px;
+  left: 425px; }
+
+.flex-sub-framework-toggle-btn {
+  justify-content: inherit;
+  z-index: 6; }
+  .flex-sub-framework-toggle-btn::after {
+    content: "";
+    width: 0;
+    height: 68px;
+    position: absolute;
+    border: 1px solid #776fff;
+    top: -18px;
+    left: 44.8%; }
+  .flex-sub-framework-toggle-btn .query-toggle-btn-div {
+    margin-left: 40.7%;
+    padding: 0px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
